<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guideLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_title"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_wellcome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wellcome1"
            android:textSize="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_title" />

        <TextView
            android:id="@+id/text_wellcome2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/wellcome2"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome1" />


        <TextView
            android:id="@+id/text_wellcome3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/wellcome3"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome2" />

        <android.widget.Button
            android:id="@+id/button_start"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/button_start"
            android:padding="20dp"
            android:text="@string/button_start"
            android:textAllCaps="false"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@id/hop_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome3" />

        <Button
            android:id="@+id/hop_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:text="@string/button_finish"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_start"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>